--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,10 @@ pydantic-settings
 python-jose[cryptography]
 passlib[bcrypt]
 redis
+
+# Тестовые зависимости
+pytest
+pytest-asyncio
+pytest-cov
+httpx
+locust
