--- a/.gitignore
+++ b/.gitignore
@@ -36,21 +36,6 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-
 # Translations
 *.mo
 *.pot
@@ -172,3 +157,6 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Mac OS
+.DS_STORE
